removing deprecation... c.newInstance()